2007-09-30  Brian Warner  <warner@lothar.com>

	* buildbot/status/web/waterfall.py (WaterfallStatusResource):
	point the 'welcome' link explicitly at index.html, rather than
	'.', so that old Waterfall users can reach it and discover all the
	new pages.

	* buildbot/status/web/base.py (OneLineMixin.make_line): add the
	build's text to the end of the line, without a CSS class so it
	remains uncolored.

	* buildbot/interfaces.py (IStatus.generateFinishedBuilds): add a
	'max_search=' argument, to limit the number of builds that are
	examined while trying to find ones that match the other criteria.
	This helps to limit the work we do, since otherwise we might have
	to trawl through all history.
	(IBuilderStatus.generateFinishedBuilds): same
	* buildbot/status/builder.py (Status.generateFinishedBuilds): same
	(BuilderStatus.generateFinishedBuilds): same

	* buildbot/status/web/base.py (OneLineMixin.make_line): stringify
	our got_revision before checking its length: SVN (at least) still
	reports numeric values for this.
	* buildbot/status/web/build.py (StatusResourceBuild.body): same
	* buildbot/status/web/xmlrpc.py
	(XMLRPCServer.xmlrpc_getAllBuildsInInterval): same, also stop
	serving a completely fake revision

	* buildbot/scripts/runner.py (Maker.check_master_cfg): prepend
	basedir to sys.path, to mimic what a real buildmaster would have
	access to, since it is common for master.cfg to import helper
	classes from .py files in the buildmaster directory, and we want
	config-file checking to accomodate this.

	* buildbot/status/web/base.py (map_branches): when referring to
	branches through WebStatus (i.e. by appending ?branch=FOO query
	arguments to the URL), make "trunk" mean trunk, by mapping it to
	None before passing it to generateFinishedBuilds() and the like.
	* buildbot/status/web/baseweb.py (OneLinePerBuild.body): same
	(OneBoxPerBuilder.body): same, also improve display of branches in
	the HTML a bit