@@ -1,5 +1,9 @@
 2007-09-30  Brian Warner  <warner@lothar.com>
 
+	* buildbot/status/web/base.py (map_branches): when we see 'trunk',
+	include both 'trunk' and None in the output list, since some VC
+	systems (SVN, frequently) refer to trunk as 'trunk'.
+
 	* buildbot/status/web/waterfall.py (WaterfallStatusResource):
 	point the 'welcome' link explicitly at index.html, rather than
 	'.', so that old Waterfall users can reach it and discover all the
